load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "blobstore",
    embed = [":blobstore_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "blobstore_lib",
    srcs = ["main.go"],
    importpath = "github.com/antonhornquist/monorepo1/blobstore",
    visibility = ["//visibility:private"],
    deps = [
        "//httpservercommon",
        "//uniqueid",
    ],
)
