load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "materializedview",
    embed = [":materializedview_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "materializedview_lib",
    srcs = ["main.go"],
    importpath = "github.com/antonhornquist/monorepo1/materializedview",
    visibility = ["//visibility:private"],
)
