load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "serviceusingextlib",
    embed = [":serviceusingextlib_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "serviceusingextlib_lib",
    srcs = ["main.go"],
    importpath = "github.com/antonhornquist/monorepo1/serviceusingextlib",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
