load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "testupload",
    embed = [":testupload_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "testupload_lib",
    srcs = ["main.go"],
    importpath = "github.com/antonhornquist/monorepo1/blobstore/testupload",
    visibility = ["//visibility:private"],
)
